ROLES: fix chat context request